--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli": "^4.5.11",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.7",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
