--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.1",
+    "@vuelidate/core": "^2.0.0-alpha.11",
+    "@vuelidate/validators": "^2.0.0-alpha.9",
     "core-js": "^3.6.5",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
