creacion de nuevo component registro

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.1",
-    "@vuelidate/core": "^2.0.0-alpha.11",
-    "@vuelidate/validators": "^2.0.0-alpha.9",
+ 
+    "@vue/cli": "^4.5.11", 
     "core-js": "^3.6.5",
+    "firebase": "^8.2.7",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
