--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
