--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^4.5.11",
     "core-js": "^3.6.5",
     "firebase": "^8.2.7",
+    "moment": "^2.29.1",
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
