--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "tailwindcss": "^2.0.3",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuelidate": "^0.7.6"
+    "vue-slick-carousel": "^1.0.6",
+    "vuelidate": "^0.7.6",
+    "vueperslides": "^2.12.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
